src/test/deca/context/valid/opArith/div.deca
// Description:
//    Programme valide ayant pour but de tester la division.
//
// Resultats:
//    c=1;

{
    int c = 2/2;
}